# hermes-agent

./: .claude_todos.json  .gitignore  AGENTS.md  ALIGNMENT_REPORT_FULL.md  CLAUDE.md
.claude/: settings.local.json
docs/: python-vs-rust-comparison.md  self-improvement-analysis.md
hermes-rs/: ALIGNMENT_REPORT.md  Cargo.toml
hermes-rs/binaries/hermes/: Cargo.toml
hermes-rs/binaries/hermes-acp/: Cargo.toml
hermes-rs/binaries/hermes-acp/src/: server.rs
hermes-rs/binaries/hermes-agent/: Cargo.toml
hermes-rs/binaries/hermes/src/: main.rs
hermes-rs/crates/hermes-acp/: Cargo.toml
hermes-rs/crates/hermes-acp/src/: lib.rs
hermes-rs/crates/hermes-agent-engine/: Cargo.toml
hermes-rs/crates/hermes-agent-engine/src/: agent.rs  budget.rs  failover.rs  lib.rs  memory_manager.rs  memory_provider.rs  message_loop.rs  review_agent.rs  self_evolution.rs  skill_utils.rs  smart_model_routing.rs  subagent.rs  title_generator.rs  trajectory.rs  usage_pricing.rs
hermes-rs/crates/hermes-agent-engine/src/agent/: control.rs  session.rs  types.rs  utils.rs
hermes-rs/crates/hermes-batch/src/: lib.rs
hermes-rs/crates/hermes-cli/: Cargo.toml
hermes-rs/crates/hermes-cli/src/: acp_cmd.rs  app.rs  auth_cmd.rs  backup_cmd.rs  banner.rs  batch_cmd.rs  claw_cmd.rs  clipboard.rs  completion_cmd.rs  config_cmd.rs  copilot_auth.rs  cron_cmd.rs  dashboard_cmd.rs  debug_cmd.rs  debug_share_cmd.rs  doctor_cmd.rs  dump_cmd.rs  gateway_mgmt.rs  insights_cmd.rs  lib.rs  login_cmd.rs  logs_cmd.rs  mcp_cmd.rs  memory_cmd.rs  model_cmd.rs  nous_subscription.rs  oauth_flow.rs  oauth_server.rs  oauth_store.rs  pairing_cmd.rs  plugins_cmd.rs  profiles_cmd.rs  sessions_cmd.rs  setup_cmd.rs  skills_hub_cmd.rs  skin_engine.rs  status_cmd.rs  tips.rs  tools_cmd.rs  uninstall_cmd.rs  (+4 more)
hermes-rs/crates/hermes-cli/src/tui/: curses.rs
hermes-rs/crates/hermes-compress/src/: compressor.rs  lib.rs  summarizer.rs
hermes-rs/crates/hermes-core/: Cargo.toml
hermes-rs/crates/hermes-core/src/: auth_lock.rs  config.rs  constants.rs  env_loader.rs  errors.rs  hermes_home.rs  lib.rs  logging.rs  platforms.rs  proxy_validation.rs  redact.rs  time.rs
hermes-rs/crates/hermes-cron/src/: delivery.rs  jobs.rs  lib.rs  scheduler.rs
hermes-rs/crates/hermes-gateway/: Cargo.toml
hermes-rs/crates/hermes-gateway/src/: config.rs  dedup.rs  lib.rs  mcp_config.rs  runner.rs  session.rs
hermes-rs/crates/hermes-llm/: Cargo.toml
hermes-rs/crates/hermes-llm/src/: anthropic.rs  auxiliary_client.rs  bedrock.rs  client.rs  codex.rs  credential_pool.rs  error_classifier.rs  lib.rs  model_metadata.rs  model_normalize.rs  models_dev.rs  pricing.rs  provider.rs  rate_limit.rs  reasoning.rs  retry.rs  runtime_provider.rs  token_estimate.rs
hermes-rs/crates/hermes-llm/src/tool_call/: deepseek_v3.rs  deepseek_v3_1.rs  glm45.rs  glm47.rs  kimi_k2.rs  llama.rs  longcat.rs  mistral.rs  mod.rs  qwen.rs  qwen3_coder.rs
hermes-rs/crates/hermes-prompt/src/: builder.rs  cache_control.rs  context_compressor.rs  context_references.rs  injection_scan.rs  lib.rs  manual_compression_feedback.rs  soul.rs  subdirectory_hints.rs
hermes-rs/crates/hermes-rl/src/: atropos_env.rs  base.rs  lib.rs  math_env.rs  tool_use_env.rs  web_research_env.rs
hermes-rs/crates/hermes-state/: Cargo.toml
hermes-rs/crates/hermes-state/src/: lib.rs  session_db.rs
hermes-rs/crates/hermes-tools/: Cargo.toml
hermes-rs/crates/hermes-tools/src/: ansi_strip.rs  approval.rs  binary_extensions.rs  budget_config.rs  checkpoint.rs  clarify.rs  clipboard.rs  credential_files.rs  credentials.rs  cron_tools.rs  debug_helpers.rs  delegate.rs  env_passthrough.rs  file_ops.rs  fuzzy_match.rs  homeassistant.rs  image_gen.rs  interrupt.rs  lib.rs  managed_tool_gateway.rs  mcp_oauth.rs  memory.rs  moa.rs  neutts_synth.rs  openrouter_client.rs  osv_check.rs  patch_parser.rs  path_security.rs  process_reg.rs  registry.rs  rl_training.rs  send_message.rs  session_search.rs  shell_file_ops.rs  skills_guard.rs  skills_hub.rs  skills_sync.rs  terminal.rs  tirith.rs  todo.rs  (+9 more)
hermes-rs/crates/hermes-tools/src/browser/: camofox.rs  mod.rs
hermes-rs/crates/hermes-tools/src/code_exec/: transport.rs
hermes-rs/crates/hermes-tools/src/environments/: docker_env.rs  mod.rs  singularity.rs  ssh.rs
hermes-rs/docs/: USAGE.md
hermes-rs/src/: main.rs
hermes-rs/src/commands/: mod.rs
hermes-rs/src/hermes_acp/: server.rs
