[workspace]
members = [
    "crates/hermes-core",
    "crates/hermes-state",
    "crates/hermes-llm",
    "crates/hermes-tools",
    "crates/hermes-prompt",
    "crates/hermes-agent-engine",
    "crates/hermes-cli",
    "crates/hermes-cron",
    "crates/hermes-batch",
    "crates/hermes-compress",
    "crates/hermes-gateway",
    "binaries/hermes",
    "binaries/hermes-agent",
    "binaries/hermes-acp",
]
default-members = [
    "crates/hermes-core",
    "crates/hermes-state",
    "crates/hermes-llm",
    "crates/hermes-tools",
    "crates/hermes-prompt",
    "crates/hermes-agent-engine",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
authors = ["Hermes Agent Contributors"]
license = "MIT"
repository = "https://github.com/NousResearch/hermes-agent"

[workspace.dependencies]
# Core
hermes-core = { path = "crates/hermes-core" }
hermes-state = { path = "crates/hermes-state" }
hermes-llm = { path = "crates/hermes-llm" }
hermes-tools = { path = "crates/hermes-tools" }
hermes-prompt = { path = "crates/hermes-prompt" }
hermes-agent-engine = { path = "crates/hermes-agent-engine" }
hermes-cli = { path = "crates/hermes-cli" }
hermes-cron = { path = "crates/hermes-cron" }
hermes-batch = { path = "crates/hermes-batch" }
hermes-compress = { path = "crates/hermes-compress" }
hermes-gateway = { path = "crates/hermes-gateway" }
hermes-bin-hermes = { path = "binaries/hermes", package = "hermes" }
hermes-bin-agent = { path = "binaries/hermes-agent", package = "hermes-agent-bin" }
hermes-bin-acp = { path = "binaries/hermes-acp", package = "hermes-acp" }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# OpenAI / Anthropic
async-openai = "0.27"

# CLI / TUI
clap = { version = "4", features = ["derive", "env"] }
reedline = "0.38"
crossterm = "0.28"
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# SQLite
rusqlite = { version = "0.32", features = ["bundled", "backup", "functions"] }

# Config / Env
dotenvy = "0.15"
rand = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"

# Utilities
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
tempfile = "3"
pathdiff = "0.2"
glob = "0.3"
walkdir = "2"
indexmap = { version = "2", features = ["serde"] }
url = "2"
ipnet = "2"
shellexpand = "3"
sha2 = "0.10"
dirs = "5"

# Token / JWT
jsonwebtoken = "9"
tiktoken-rs = "0.6"

# Cron
cron = "0.15"

# Diff / Fuzzy
similar = { version = "2", features = ["inline"] }
fuzzy-matcher = "0.3"

# Templates
minijinja = { version = "2", features = ["loader"] }

# MCP
rmcp = "0.1"

# Docker
bollard = "0.18"

# SSH
russh = "0.50"

# Testing
rstest = "0.24"
mockito = "1"
proptest = "1"
tokio-test = "0.4"

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.dev]
split-debuginfo = "unpacked"
