[package]
name = "hermes-acp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "hermes-acp"
path = "src/main.rs"

[dependencies]
hermes-agent-engine.workspace = true
hermes-core.workspace = true
hermes-tools.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
parking_lot.workspace = true
dirs.workspace = true
