[package]
name = "hermes-agent-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "hermes-agent"
path = "src/main.rs"

[dependencies]
hermes-agent-engine.workspace = true
hermes-core.workspace = true
hermes-tools.workspace = true
hermes-state.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
