[package]
name = "hermes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
hermes-cli.workspace = true
hermes-core.workspace = true
hermes-state.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
