[package]
name = "hermes-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hermes-core.workspace = true
hermes-llm.workspace = true
hermes-tools.workspace = true
hermes-prompt.workspace = true
hermes-agent-engine.workspace = true
hermes-state.workspace = true
hermes-batch.workspace = true
hermes-cron.workspace = true
hermes-gateway.workspace = true
async-trait.workspace = true
uuid.workspace = true
tokio.workspace = true
dirs.workspace = true
clap.workspace = true
clap_complete.workspace = true
reedline.workspace = true
crossterm.workspace = true
console.workspace = true
indicatif.workspace = true
dialoguer.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
regex.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
chrono.workspace = true
shellexpand.workspace = true
which = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serial_test = "3"
