[package]
name = "hermes-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hermes-core.workspace = true
async-openai.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
regex.workspace = true
async-trait.workspace = true
futures.workspace = true
tiktoken-rs.workspace = true
chrono.workspace = true
dirs.workspace = true
fastrand = "2"

[dev-dependencies]
mockito = "1"
